--- a/.github/workflows/call-perf-test.yml
+++ b/.github/workflows/call-perf-test.yml
@@ -149,6 +149,7 @@ jobs:
       run: |
         pip install ${{ matrix.build.pyreq }}
         pip install torchvision==0.24.0+cpu --index-url https://download.pytorch.org/whl/cpu
+        pip install onnx
 
     - name: Create perf report directory
       run: mkdir -p ${{ steps.strings.outputs.perf_report_path }}
