--- a/tests/runner/test_config/jax/test_config_inference_single_device.yaml
+++ b/tests/runner/test_config/jax/test_config_inference_single_device.yaml
@@ -382,9 +382,11 @@ test_config:
 
   qwen_2_5_coder/causal_lm/jax-1.5B-single_device-inference:
     status: EXPECTED_PASSING
+    markers: [large]
 
   qwen_2_5_coder/causal_lm/jax-1.5B_Instruct-single_device-inference:
     status: EXPECTED_PASSING
+    markers: [large]
 
   qwen_2_5_coder/causal_lm/jax-3B-single_device-inference:
     status: NOT_SUPPORTED_SKIP
