--- a/.github/workflows/call-build-manylinux.yml
+++ b/.github/workflows/call-build-manylinux.yml
@@ -28,31 +28,31 @@ jobs:
       - name: Git safe dir
         run: git config --global --add safe.directory ${{ steps.strings.outputs.work-dir }}
 
-      - name: Set up Python 3.11
-        uses: actions/setup-python@v6
-        with:
-          python-version: '3.11'
+      # - name: Set up Python 3.12
+      #   uses: actions/setup-python@v6
+      #   with:
+      #     python-version: '3.12'
 
-      - name: Install cibuildwheel
-        run: python -m pip install cibuildwheel==3.3.0
+      # - name: Install cibuildwheel
+      #   run: python -m pip install cibuildwheel==3.3.0
 
-      - name: Build tt-xla wheel
-        env:
-          CIBW_ENVIRONMENT: "IN_CIBW_ENV=ON"
-          CIBW_MANYLINUX_X86_64_IMAGE: ${{ inputs.docker-image }}
-          CIBW_SKIP: "*-musllinux_*"
-        run: python -m cibuildwheel --output-dir "${{ steps.strings.outputs.wheel-output-dir }}" --config-file "${{ steps.strings.outputs.work-dir }}/python_package/pyproject.toml" ${{ steps.strings.outputs.work-dir }}/python_package
-
-      # - name: Build ttxla  Wheel (manylinux)
-      #   uses: pypa/cibuildwheel@v3.3
+      # - name: Build tt-xla wheel
       #   env:
       #     CIBW_ENVIRONMENT: "IN_CIBW_ENV=ON"
       #     CIBW_MANYLINUX_X86_64_IMAGE: ${{ inputs.docker-image }}
-      #     CIBW_PROJECT_REQUIRES_PYTHON: "=3.11.*"
-      #   with:
-      #     output-dir: ${{ steps.strings.outputs.wheel-output-dir }}
-      #     package-dir: ${{ steps.strings.outputs.work-dir }}/python_package
-      #     config-file: "${{ steps.strings.outputs.work-dir }}/python_package/pyproject.toml"
+      #     CIBW_SKIP: "*-musllinux_*"
+      #   run: python -m cibuildwheel --output-dir "${{ steps.strings.outputs.wheel-output-dir }}" --config-file "${{ steps.strings.outputs.work-dir }}/python_package/pyproject.toml" ${{ steps.strings.outputs.work-dir }}/python_package
+
+      - name: Build ttxla  Wheel (manylinux)
+        uses: pypa/cibuildwheel@v3.3
+        env:
+          CIBW_ENVIRONMENT: "IN_CIBW_ENV=ON"
+          CIBW_MANYLINUX_X86_64_IMAGE: ${{ inputs.docker-image }}
+          CIBW_PROJECT_REQUIRES_PYTHON: "=3.12.*"
+        with:
+          output-dir: ${{ steps.strings.outputs.wheel-output-dir }}
+          package-dir: ${{ steps.strings.outputs.work-dir }}/python_package
+          config-file: "${{ steps.strings.outputs.work-dir }}/python_package/pyproject.toml"
 
       - name: Upload wheel artifact
         uses: actions/upload-artifact@v4
