--- a/.github/workflows/manual-test.yml
+++ b/.github/workflows/manual-test.yml
@@ -36,6 +36,11 @@ on:
         description: 'Git SHA of commit in tenstorrent/tt-mlir'
         required: false
         type: string
+      manylinux_build:
+        description: 'Whether to build manylinux wheel'
+        required: false
+        type: boolean
+        default: false
 
 permissions:
   packages: write
@@ -49,6 +54,7 @@ jobs:
     secrets: inherit
     with:
       mlir_override: ${{ inputs.mlir_override }}
+      dockbuild: ${{ inputs.manylinux_build == 'true' && 'all' || 'ci' }}
 
   build-ttxla:
     needs: build-image
@@ -58,16 +64,24 @@ jobs:
       docker_image: ${{ needs.build-image.outputs.docker-image }}
       mlir_override: ${{ inputs.mlir_override }}
 
+  build-manylinux-ttxla:
+    if: inputs.manylinux_build == 'true'
+    needs: build-image
+    uses: ./.github/workflows/call-build-manylinux.yml
+    secrets: inherit
+    with:
+      docker-image: ${{ needs.build-image.outputs.docker-image-manylinux }}
+
   test:
     if: success() && !cancelled() && inputs.preset != 'tt_forge_models'
     uses: ./.github/workflows/call-test.yml
-    needs: [ build-image, build-ttxla]
+    needs: [ build-image, build-ttxla, build-manylinux-ttxla ]
     secrets: inherit
     with:
       test_suite: ${{ inputs.test_suite }}
       test_suite_custom: ${{ inputs.test_suite_custom }}
       docker_image: ${{ needs.build-image.outputs.docker-image-base }}
-      artifact_release_run_id: ${{ needs.build-ttxla.outputs.artifacts_run_id }}
-      wheel_release_artifact_name: ${{ needs.build-ttxla.outputs.wheel_artifact_name }}
+      artifact_release_run_id: ${{ inputs.manylinux_build == 'true' && github.run_id || needs.build-ttxla.outputs.artifacts_run_id }}
+      wheel_release_artifact_name: ${{ inputs.manylinux_build == 'true' && 'xla-whl-manylinux' || needs.build-ttxla.outputs.wheel_artifact_name }}
       wheel_release_vllm_tt_artifact_name: ${{ needs.build-ttxla.outputs.wheel_release_vllm_tt_artifact_name }}
       alchemist_artifact_name: ${{ needs.build-ttxla.outputs.alchemist_artifact_name }}
