--- a/.github/workflows/push-main.yml
+++ b/.github/workflows/push-main.yml
@@ -21,6 +21,8 @@ jobs:
   build-image:
     uses: ./.github/workflows/call-build-docker.yml
     secrets: inherit
+    with:
+      dockbuild: all
 
   build-ttxla:
     uses: ./.github/workflows/call-build.yml
