--- a/.github/workflows/call-build-manylinux.yml
+++ b/.github/workflows/call-build-manylinux.yml
@@ -28,10 +28,10 @@ jobs:
       - name: Git safe dir
         run: git config --global --add safe.directory ${{ steps.strings.outputs.work-dir }}
 
-      # - name: Set up Python 3.12
-      #   uses: actions/setup-python@v6
-      #   with:
-      #     python-version: '3.12'
+      - name: Set up Python 3.12
+        uses: actions/setup-python@v6
+        with:
+          python-version: '3.12'
 
       # - name: Install cibuildwheel
       #   run: python -m pip install cibuildwheel==3.3.0
