--- a/.github/workflows/manual-test.yml
+++ b/.github/workflows/manual-test.yml
@@ -65,7 +65,7 @@ jobs:
       mlir_override: ${{ inputs.mlir_override }}
 
   build-manylinux-ttxla:
-    if: inputs.manylinux_build == 'true'
+    if: inputs.manylinux_build
     needs: build-image
     uses: ./.github/workflows/call-build-manylinux.yml
     secrets: inherit
@@ -81,7 +81,7 @@ jobs:
       test_suite: ${{ inputs.test_suite }}
       test_suite_custom: ${{ inputs.test_suite_custom }}
       docker_image: ${{ needs.build-image.outputs.docker-image-base }}
-      artifact_release_run_id: ${{ inputs.manylinux_build == 'true' && github.run_id || needs.build-ttxla.outputs.artifacts_run_id }}
-      wheel_release_artifact_name: ${{ inputs.manylinux_build == 'true' && 'xla-whl-manylinux' || needs.build-ttxla.outputs.wheel_artifact_name }}
+      artifact_release_run_id: ${{ inputs.manylinux_build && github.run_id || needs.build-ttxla.outputs.artifacts_run_id }}
+      wheel_release_artifact_name: ${{ inputs.manylinux_build && 'xla-whl-manylinux' || needs.build-ttxla.outputs.wheel_artifact_name }}
       wheel_release_vllm_tt_artifact_name: ${{ needs.build-ttxla.outputs.wheel_release_vllm_tt_artifact_name }}
       alchemist_artifact_name: ${{ needs.build-ttxla.outputs.alchemist_artifact_name }}
