--- a/.github/workflows/call-build-manylinux.yml
+++ b/.github/workflows/call-build-manylinux.yml
@@ -48,7 +48,8 @@ jobs:
         env:
           CIBW_ENVIRONMENT: "IN_CIBW_ENV=ON"
           CIBW_MANYLINUX_X86_64_IMAGE: ${{ inputs.docker-image }}
-          CIBW_PROJECT_REQUIRES_PYTHON: "=3.12.*"
+          CIBW_PROJECT_REQUIRES_PYTHON: "==3.12.*"
+          CIBW_SKIP: "*-musllinux_*"
         with:
           output-dir: ${{ steps.strings.outputs.wheel-output-dir }}
           package-dir: ${{ steps.strings.outputs.work-dir }}/python_package
