--- a/tests/runner/test_config/torch/test_config_inference_single_device.yaml
+++ b/tests/runner/test_config/torch/test_config_inference_single_device.yaml
@@ -898,11 +898,11 @@ test_config:
 
   qwen_2_5_vl/pytorch-3B_Instruct-single_device-inference:
     status: KNOWN_FAILURE_XFAIL
-    reason: "error: failed to legalize operation 'ttir.convolution' - https://github.com/tenstorrent/tt-xla/issues/1662"
+    reason: "RuntimeError: split_with_sizes expects split_sizes to sum exactly to 2204 (input tensor's size at dimension 2), but got split_sizes=[2208]' - https://github.com/tenstorrent/tt-xla/issues/3435"
 
   qwen_2_5_vl/pytorch-7B_Instruct-single_device-inference:
     status: KNOWN_FAILURE_XFAIL
-    reason: "error: failed to legalize operation 'ttir.convolution' - https://github.com/tenstorrent/tt-xla/issues/1662"
+    reason: "RuntimeError: split_with_sizes expects split_sizes to sum exactly to 2204 (input tensor's size at dimension 2), but got split_sizes=[2208]' - https://github.com/tenstorrent/tt-xla/issues/3435"
     arch_overrides:
       n150:
         status: NOT_SUPPORTED_SKIP
