--- a/.github/workflows/pr-main.yml
+++ b/.github/workflows/pr-main.yml
@@ -39,8 +39,6 @@ jobs:
     if: needs.inspect-changes.outputs.skip-build-and-test == 'false'
     uses: ./.github/workflows/call-build-docker.yml
     secrets: inherit
-    with:
-      dockbuild: all
 
   build-ttxla-release:
     if: needs.inspect-changes.outputs.skip-build-and-test == 'false'
@@ -51,122 +49,116 @@ jobs:
     with:
       docker_image: ${{ needs.build-image.outputs.docker-image }}
 
-  build-manylinux-ttxla:
-    needs: [ build-image ]
-    uses: ./.github/workflows/call-build-manylinux.yml
-    name: "Build tt-xla manylinux wheels"
+  build-ttxla-explorer:
+    if: needs.inspect-changes.outputs.skip-build-and-test == 'false' && needs.inspect-changes.outputs.only-run-forge-models != 'true'
+    uses: ./.github/workflows/call-build.yml
+    name: "Build tt-xla with explorer"
     secrets: inherit
+    needs: [ inspect-changes, build-image ]
     with:
-      docker-image: ${{ needs.build-image.outputs.docker-image-manylinux }}
+      docker_image: ${{ needs.build-image.outputs.docker-image }}
+      build_type: explorer
 
-  # build-ttxla-explorer:
-  #   if: needs.inspect-changes.outputs.skip-build-and-test == 'false' && needs.inspect-changes.outputs.only-run-forge-models != 'true'
-  #   uses: ./.github/workflows/call-build.yml
-  #   name: "Build tt-xla with explorer"
-  #   secrets: inherit
-  #   needs: [ inspect-changes, build-image ]
-  #   with:
-  #     docker_image: ${{ needs.build-image.outputs.docker-image }}
-  #     build_type: explorer
+  build-ttxla-debug:
+    if: needs.inspect-changes.outputs.skip-build-and-test == 'false'
+    uses: ./.github/workflows/call-build-debug.yml
+    name: "Build and test tt-xla (debug with coverage)"
+    secrets: inherit
+    needs: [ inspect-changes, build-image ]
+    with:
+      docker_image: ${{ needs.build-image.outputs.docker-image }}
 
   test:
-    needs: [ inspect-changes, build-image, build-manylinux-ttxla, build-ttxla-release ]
+    needs: [ inspect-changes, build-image, build-ttxla-release ]
     if: needs.inspect-changes.outputs.skip-build-and-test == 'false' && needs.inspect-changes.outputs.only-run-forge-models != 'true'
     uses: ./.github/workflows/call-test.yml
     secrets: inherit
     with:
       test_suite: basic-test.json
       docker_image: ${{ needs.build-image.outputs.docker-image-base }}
-      artifact_release_run_id: ${{ github.run_id }}
-      wheel_release_artifact_name: xla-whl-manylinux
+      artifact_release_run_id: ${{ needs.build-ttxla-release.outputs.artifacts_run_id }}
+      wheel_release_artifact_name: ${{ needs.build-ttxla-release.outputs.wheel_artifact_name }}
       wheel_release_vllm_tt_artifact_name: ${{ needs.build-ttxla-release.outputs.wheel_release_vllm_tt_artifact_name }}
       alchemist_artifact_name: ${{ needs.build-ttxla-release.outputs.alchemist_artifact_name }}
 
-  # perf-benchmark:
-  #   if: needs.inspect-changes.outputs.skip-build-and-test == 'false' && needs.inspect-changes.outputs.only-run-forge-models != 'true' && vars.RUN_PERF_ON_UPLIFT == 'true'  && github.event_name == 'pull_request' && contains(github.event.pull_request.labels.*.name, 'uplift')
-  #   needs: [ inspect-changes, build-image, build-ttxla-release ]
-  #   uses: tenstorrent/tt-forge/.github/workflows/perf-benchmark.yml@main
-  #   secrets: inherit
-  #   with:
-  #     project: tt-xla
-  #     run_id: ${{ needs.build-ttxla-release.outputs.artifacts_run_id }}
-  #     run_id_source: tt-xla
-  #     ref: main
-  #     perf_regression_check: true
+  perf-benchmark-n150:
+    if: needs.inspect-changes.outputs.skip-build-and-test == 'false' && needs.inspect-changes.outputs.only-run-forge-models != 'true' && vars.RUN_PERF_ON_UPLIFT == 'true'  && github.event_name == 'pull_request' && contains(github.event.pull_request.labels.*.name, 'uplift-mlir')
+    needs: [ inspect-changes, build-image, build-ttxla-release ]
+    uses: tenstorrent/tt-forge/.github/workflows/perf-benchmark.yml@main
+    secrets: inherit
+    with:
+      project: tt-xla
+      run_id: ${{ needs.build-ttxla-release.outputs.artifacts_run_id }}
+      run_id_source: tt-xla
+      ref: main
+      perf_regression_check: true
+      test-filter: resnet,llama_3_1_8b_instruct,qwen_3_4b_embedding
+      runs-on-filter: n150
+      sh-runner: false
 
-  # build-ttxla-debug:
-  #   if: needs.inspect-changes.outputs.skip-build-and-test == 'false'
-  #   uses: ./.github/workflows/call-build-debug.yml
-  #   name: "Build and test tt-xla (debug with coverage)"
-  #   secrets: inherit
-  #   needs: [ inspect-changes, build-image ]
-  #   with:
-  #     docker_image: ${{ needs.build-image.outputs.docker-image }}
-
-  # test:
-  #   needs: [ inspect-changes, build-image, build-ttxla-release ]
-  #   if: needs.inspect-changes.outputs.skip-build-and-test == 'false' && needs.inspect-changes.outputs.only-run-forge-models != 'true'
-  #   uses: ./.github/workflows/call-test.yml
-  #   secrets: inherit
-  #   with:
-  #     test_suite: basic-test.json
-  #     docker_image: ${{ needs.build-image.outputs.docker-image-base }}
-  #     artifact_release_run_id: ${{ needs.build-ttxla-release.outputs.artifacts_run_id }}
-  #     wheel_release_artifact_name: ${{ needs.build-ttxla-release.outputs.wheel_artifact_name }}
-  #     wheel_release_vllm_tt_artifact_name: ${{ needs.build-ttxla-release.outputs.wheel_release_vllm_tt_artifact_name }}
-
-  # perf-benchmark:
-  #   if: needs.inspect-changes.outputs.skip-build-and-test == 'false' && needs.inspect-changes.outputs.only-run-forge-models != 'true' && vars.RUN_PERF_ON_UPLIFT == 'true'  && github.event_name == 'pull_request' && contains(github.event.pull_request.labels.*.name, 'uplift')
-  #   needs: [ inspect-changes, build-image, build-ttxla-release ]
-  #   uses: tenstorrent/tt-forge/.github/workflows/perf-benchmark.yml@main
-  #   secrets: inherit
-  #   with:
-  #     project: tt-xla
-  #     run_id: ${{ needs.build-ttxla-release.outputs.artifacts_run_id }}
-  #     run_id_source: tt-xla
-  #     ref: main
-  #     perf_regression_check: true
+  perf-benchmark-llmbox:
+    if: needs.inspect-changes.outputs.skip-build-and-test == 'false' && needs.inspect-changes.outputs.only-run-forge-models != 'true' && vars.RUN_PERF_ON_UPLIFT == 'true'  && github.event_name == 'pull_request' && contains(github.event.pull_request.labels.*.name, 'uplift-mlir')
+    needs: [ inspect-changes, build-image, build-ttxla-release ]
+    uses: tenstorrent/tt-forge/.github/workflows/perf-benchmark.yml@main
+    secrets: inherit
+    with:
+      project: tt-xla
+      run_id: ${{ needs.build-ttxla-release.outputs.artifacts_run_id }}
+      run_id_source: tt-xla
+      ref: main
+      perf_regression_check: true
+      test-filter: test_llama_3_1_70b_tp
+      runs-on-filter: llmbox
+      sh-runner: false
 
   test_forge_models_push:
     if: needs.inspect-changes.outputs.skip-build-and-test == 'false'
     uses: ./.github/workflows/call-test.yml
     secrets: inherit
-    needs: [ inspect-changes, build-image, build-ttxla-release, build-manylinux-ttxla ]
+    needs: [ inspect-changes, build-image, build-ttxla-release ]
     with:
       test_suite: model-test-push.json
       docker_image: ${{ needs.build-image.outputs.docker-image }}
-      artifact_release_run_id: ${{ github.run_id }}
-      wheel_release_artifact_name: xla-whl-manylinux
+      artifact_release_run_id: ${{ needs.build-ttxla-release.outputs.artifacts_run_id }}
+      wheel_release_artifact_name: ${{ needs.build-ttxla-release.outputs.wheel_artifact_name }}
 
-  # test_models_on_uplift:
-  #   if: needs.inspect-changes.outputs.run-uplift-model-tests == 'true'
-  #   uses: ./.github/workflows/call-test.yml
-  #   secrets: inherit
-  #   needs: [ inspect-changes, build-image, build-ttxla-release ]
-  #   with:
-  #     test_suite: model-test-extended.json
-  #     docker_image: ${{ needs.build-image.outputs.docker-image }}
-  #     artifact_release_run_id: ${{ needs.build-ttxla-release.outputs.artifacts_run_id }}
-  #     wheel_release_artifact_name: ${{ needs.build-ttxla-release.outputs.wheel_artifact_name }}
+  test_models_on_uplift:
+    if: needs.inspect-changes.outputs.run-uplift-model-tests == 'true'
+    uses: ./.github/workflows/call-test.yml
+    secrets: inherit
+    needs: [ inspect-changes, build-image, build-ttxla-release ]
+    with:
+      test_suite: model-test-extended.json
+      docker_image: ${{ needs.build-image.outputs.docker-image }}
+      artifact_release_run_id: ${{ needs.build-ttxla-release.outputs.artifacts_run_id }}
+      wheel_release_artifact_name: ${{ needs.build-ttxla-release.outputs.wheel_artifact_name }}
 
-  # build-docs:
-  #   if: needs.inspect-changes.outputs.skip-build-and-test == 'false'
-  #   needs: [ inspect-changes, build-image, build-ttxla-release ]
-  #   uses: ./.github/workflows/call-check-docs-build.yml
-  #   secrets: inherit
-  #   with:
-  #     docker_image: ${{ needs.build-image.outputs.docker-image }}
+  build-docs:
+    if: needs.inspect-changes.outputs.skip-build-and-test == 'false'
+    needs: [ inspect-changes, build-image, build-ttxla-release ]
+    uses: ./.github/workflows/call-check-docs-build.yml
+    secrets: inherit
+    with:
+      docker_image: ${{ needs.build-image.outputs.docker-image }}
 
   check-all-green:
     if: always()
     needs:
       - pre-commit
       - build-image
-      - build-manylinux-ttxla
+      - build-ttxla-release
+      - build-ttxla-explorer
+      - build-ttxla-debug
+      - test
+      - test_forge_models_push
+      - test_models_on_uplift
+      - perf-benchmark-n150
+      - perf-benchmark-llmbox
+      - build-docs
     runs-on: Ubuntu-latest
     steps:
     - name: Check if the needed jobs succeeded or failed
       uses: re-actors/alls-green@release/v1
       with:
-        allowed-skips: build-image, build-ttxla-release, build-ttxla-explorer, build-ttxla-debug, test, test_forge_models_push, build-docs, test_models_on_uplift, test-tools, perf-benchmark-n150, perf-benchmark-llmbox
+        allowed-skips: build-image, build-ttxla-release, build-ttxla-explorer, build-ttxla-debug, test, test_forge_models_push, build-docs, test_models_on_uplift, perf-benchmark-n150, perf-benchmark-llmbox
         jobs: ${{ toJSON(needs) }}
