--- a/tests/pjrt/CMakeLists.txt
+++ b/tests/pjrt/CMakeLists.txt
@@ -10,11 +10,14 @@
 include(FetchContent)
 
 if(TTXLA_ENABLE_PJRT_TESTS)
+    message(STATUS "======== gtest ========")
+    message(STATUS "CMAKE_C_COMPILER: ${CMAKE_C_COMPILER}")
+    message(STATUS "CMAKE_CXX_COMPILER: ${CMAKE_CXX_COMPILER}")
     # TODO(acicovic): Investigate why this is needed here and in /third_party/.
-    if(CMAKE_C_COMPILER MATCHES "clang-17")
+    if(CMAKE_C_COMPILER MATCHES "clang")
         set(CMAKE_C_COMPILER "/usr/bin/clang-17" CACHE STRING "" FORCE)
     endif()
-    if(CMAKE_CXX_COMPILER MATCHES "clang\\+\\+-17")
+    if(CMAKE_CXX_COMPILER MATCHES "clang\\+\\+")
         set(CMAKE_CXX_COMPILER "/usr/bin/clang++-17" CACHE STRING "" FORCE)
     endif()
 
