--- a/tests/runner/test_config/torch/test_config_inference_single_device.yaml
+++ b/tests/runner/test_config/torch/test_config_inference_single_device.yaml
@@ -2161,12 +2161,14 @@ test_config:
         reason: "Multi chip is required"
 
   openvla/pytorch-7B_Finetuned_Libero_Object-single_device-inference:
-    status: KNOWN_FAILURE_XFAIL
-    reason: "Out of Memory: Not enough space to allocate 90177536 B DRAM buffer across 12 banks, where each bank needs to store 7516160 B, but bank size is only 1073741792 B"
-    arch_overrides:
-      n150:
-        status: NOT_SUPPORTED_SKIP
-        reason: "Multi chip is required"
+    supported_archs: ["p150"]
+    status: EXPECTED_PASSING
+    # status: KNOWN_FAILURE_XFAIL
+    # reason: "Out of Memory: Not enough space to allocate 90177536 B DRAM buffer across 12 banks, where each bank needs to store 7516160 B, but bank size is only 1073741792 B"
+    # arch_overrides:
+    #   n150:
+    #     status: NOT_SUPPORTED_SKIP
+    #     reason: "Multi chip is required"
 
   openvla/pytorch-7B_Finetuned_Libero_Spatial-single_device-inference:
     status: KNOWN_FAILURE_XFAIL
