Skip perf regression checks on uplift workflows until they are fixed

--- a/.github/workflows/pr-main.yml
+++ b/.github/workflows/pr-main.yml
@@ -90,7 +90,7 @@ jobs:
       runs-on-filter: n150
       sh-runner: false
       skip-device-perf: false
-      perf_regression_check: true
+      perf_regression_check: false
       test_filter: resnet,llama_3_1_8b_instruct,qwen_3_4b_embedding
 
   perf-benchmark-llmbox:
@@ -102,7 +102,7 @@ jobs:
       runs-on-filter: n300-llmbox
       sh-runner: false
       skip-device-perf: false
-      perf_regression_check: true
+      perf_regression_check: false
       test_filter: test_llama_3_1_70b_tp
 
   test_forge_models_push:
