--- a/python_package/CMakeLists.txt
+++ b/python_package/CMakeLists.txt
@@ -7,9 +7,12 @@ if(TTXLA_ENABLE_EWHEEL_INSTALL)
       COMMENT "Running editable installation..."
       USES_TERMINAL
   )
+
+  add_dependencies(install-ttxla-python-packages TTPJRTTTDylib)
 endif()
 
-add_dependencies(install-ttxla-python-packages TTPJRTTTDylib bundle-tracy bundle-ttnn)
+add_dependencies(bundle-tracy tt-mlir)
+add_dependencies(bundle-ttnn tt-mlir)
 
 # Create symlinks to the original tracy and ttnn modules from tt-metal.
 # These symlinks allow our wrapper modules to import and delegate to the original code.
