--- a/tests/runner/test_config/torch/test_config_inference_single_device.yaml
+++ b/tests/runner/test_config/torch/test_config_inference_single_device.yaml
@@ -2180,10 +2180,10 @@ test_config:
     status: KNOWN_FAILURE_XFAIL
     reason: "error: Shardy propagation doesn't support tuples: 'tuple<tensor<3x3xf32>, tensor<3xf32>>' (https://github.com/tenstorrent/tt-xla/issues/3257)"
 
-  issac_groot/pytorch-Gr00t_N1.5_3B-single_device-inference:
-    status: NOT_SUPPORTED_SKIP
-    reason: "Statically allocated circular buffers on core range [(x=6,y=7) - (x=6,y=7)] grow to 2012288 B which is beyond max L1 size of 1499136 B" # https://github.com/tenstorrent/tt-xla/issues/2817
-    bringup_status: FAILED_RUNTIME
+  # issac_groot/pytorch-Gr00t_N1.5_3B-single_device-inference:
+  #   status: NOT_SUPPORTED_SKIP
+  #   reason: "Statically allocated circular buffers on core range [(x=6,y=7) - (x=6,y=7)] grow to 2012288 B which is beyond max L1 size of 1499136 B" # https://github.com/tenstorrent/tt-xla/issues/2817
+  #   bringup_status: FAILED_RUNTIME
 
   # yolov11/pytorch-yolo11n-single_device-full-inference:
   #   status: EXPECTED_PASSING
@@ -2482,9 +2482,9 @@ test_config:
   ultra_fast_lane_detection/pytorch-TuSimple_ResNet34_Backbone-single_device-inference:
     status: EXPECTED_PASSING
 
-  dense_unet_3d/pytorch-Base-single_device-inference:
-    status: NOT_SUPPORTED_SKIP
-    reason: "RuntimeError: torch._dynamo.exc.TorchRuntimeError: Dynamo failed to run FX node with fake tensors: call_module L__self___maxpool1(*(FakeTensor(..., device='xla:0', size=(1, 96, 16, 128, 128), dtype=torch.bfloat16),), https://github.com/tenstorrent/tt-xla/issues/2567"
+  # dense_unet_3d/pytorch-Base-single_device-inference:
+    # status: NOT_SUPPORTED_SKIP
+    # reason: "RuntimeError: torch._dynamo.exc.TorchRuntimeError: Dynamo failed to run FX node with fake tensors: call_module L__self___maxpool1(*(FakeTensor(..., device='xla:0', size=(1, 96, 16, 128, 128), dtype=torch.bfloat16),), https://github.com/tenstorrent/tt-xla/issues/2567"
 
   openvla_oft/pytorch-Finetuned_Libero_10-single_device-inference:
     status: EXPECTED_PASSING
