try PROJECT_SOURCE_DIR

--- a/python_package/CMakeLists.txt
+++ b/python_package/CMakeLists.txt
@@ -14,21 +14,21 @@ endif()
 # Create symlinks to the original tracy and ttnn modules from tt-metal.
 # These symlinks allow our wrapper modules to import and delegate to the original code.
 # Check if required directories exist before creating symlinks
-if(NOT EXISTS "${CMAKE_CURRENT_SOURCE_DIR}/tt-mlir/install/tt-metal/tools/tracy")
-  message(FATAL_ERROR "tracy directory not found at: ${CMAKE_CURRENT_SOURCE_DIR}/tt-mlir/install/tt-metal/tools/tracy")
+if(NOT EXISTS "${PROJECT_SOURCE_DIR}/tt-mlir/install/tt-metal/tools/tracy")
+  message(FATAL_ERROR "tracy directory not found at: ${PROJECT_SOURCE_DIR}/tt-mlir/install/tt-metal/tools/tracy")
 endif()
 
 add_custom_target(bundle-tracy ALL
-  COMMAND ${CMAKE_COMMAND} -E create_symlink ${CMAKE_CURRENT_SOURCE_DIR}/tt-mlir/install/tt-metal/tools/tracy ${CMAKE_CURRENT_SOURCE_DIR}/tracy/_original
+  COMMAND ${CMAKE_COMMAND} -E create_symlink ${PROJECT_SOURCE_DIR}/tt-mlir/install/tt-metal/tools/tracy ${CMAKE_CURRENT_SOURCE_DIR}/tracy/_original
   DEPENDS tt-mlir
 )
 
-if(NOT EXISTS "${CMAKE_CURRENT_SOURCE_DIR}/tt-mlir/install/tt-metal/ttnn/ttnn")
-  message(FATAL_ERROR "ttnn directory not found at: ${CMAKE_CURRENT_SOURCE_DIR}/tt-mlir/install/tt-metal/ttnn/ttnn")
+if(NOT EXISTS "${PROJECT_SOURCE_DIR}/tt-mlir/install/tt-metal/ttnn/ttnn")
+  message(FATAL_ERROR "ttnn directory not found at: ${PROJECT_SOURCE_DIR}/tt-mlir/install/tt-metal/ttnn/ttnn")
 endif()
 
 add_custom_target(bundle-ttnn ALL
-  COMMAND ${CMAKE_COMMAND} -E create_symlink ${CMAKE_CURRENT_SOURCE_DIR}/tt-mlir/install/tt-metal/ttnn/ttnn ${CMAKE_CURRENT_SOURCE_DIR}/ttnn/_original
+  COMMAND ${CMAKE_COMMAND} -E create_symlink ${PROJECT_SOURCE_DIR}/tt-mlir/install/tt-metal/ttnn/ttnn ${CMAKE_CURRENT_SOURCE_DIR}/ttnn/_original
   DEPENDS tt-mlir
 )
 
