Add gpt-oss-120b + llama3.1-70B on WH Galaxy to Nightly CI via test_models.py
 - New entry in model-test-passing.json for galaxy-wh-6u mmodels
 - Tag 2 tests to run on galaxy-wh-6u, PCC disabled issues opened,
   lama is generality so tag w/ nightly marker
 - Add new galaxy-wh-6u to ALLOWED_ARCHES and manual-test-single.yml

--- a/tests/runner/test_config/torch/test_config_inference_tensor_parallel.yaml
+++ b/tests/runner/test_config/torch/test_config_inference_tensor_parallel.yaml
@@ -37,6 +37,11 @@ test_config:
     status: EXPECTED_PASSING
     assert_pcc: false # https://github.com/tenstorrent/tt-xla/issues/3490
 
+  gpt_oss/pytorch-120B-tensor_parallel-inference:
+    supported_archs: [galaxy-wh-6u]
+    status: EXPECTED_PASSING
+    assert_pcc: false # https://github.com/tenstorrent/tt-xla/issues/3490
+
   falcon/pytorch-7B_Instruct-tensor_parallel-inference:
     supported_archs: [n300-llmbox]
     status: EXPECTED_PASSING
@@ -151,10 +156,10 @@ test_config:
     bringup_status: FAILED_RUNTIME
 
   llama/causal_lm/pytorch-3.1_70B-tensor_parallel-inference:
-    supported_archs: [n300-llmbox]
-    status: NOT_SUPPORTED_SKIP
-    reason: "Needs bringup on galaxy"
-    bringup_status: FAILED_RUNTIME
+    supported_archs: [galaxy-wh-6u]
+    status: EXPECTED_PASSING
+    markers: [nightly] # Not red model, but high priority.
+    assert_pcc: false # https://github.com/tenstorrent/tt-xla/issues/2976
 
   llama/causal_lm/pytorch-3.1_70B_Instruct-tensor_parallel-inference:
     supported_archs: [n300-llmbox]
