Introduce accuracy testing to test_llms.py: - Add --accuracy-testing argument to test_llms.py tests that we track in benchmark testing. - Add --batch-size argument to accuracy tests in test_llms.py because we can't fit default batch 32 on device   due to larger input sequence length required in accuracy testing.   With batch size 32 and input sequence length, 7B and 8B models failed with OOM issues. - Run accuracy tests in separate job called: run-n150-accuracy-benchmarks of the perf-benchmark-experimental workflow
Teacher forcing for accuracy testing:
- Add teacher forcing support to generate_and_benchmark() for accuracy testing mode
- Route to teacher_forced_generate() when ground_truth_tokens provided
- Update construct_inputs() to support pre-tokenized input and custom prompts

Generating ground truth .refpt files (generate_reference_outputs.py):
Add generate_reference_outputs.py: create ground truth .refpt files for accuracy testing
Generate reference top1/top5 token predictions for LLM accuracy benchmarking:
  - Loads HuggingFace models on CPU for deterministic inference
  - Processes "Tale of Two Cities" text corpus with teacher forcing
  - Outputs .refpt files containing reference tokens and top-k predictions
  - Used by TokenAccuracy class to validate TOP1/TOP5 accuracy during benchmarks

 Ensures reproducibility through eval mode, disabled dropout, greedy decoding,
 and StaticCache matching the benchmark environment. Reference files must be
 regenerated if input_sequence_length changes.

 Usage:
    python3 scripts/generate_reference_outputs.py \
        --model "meta-llama/Llama-3.2-1B-Instruct" \
        --output_file "reference_outputs/Llama-3.2-1B-Instruct.refpt" \
        --total_length 128

Adding shared utility for decode (decode_utils.py):
Centralize LLM decode operations used by reference output generation and accuracy testing:
  - Teacher forcing generation with ground truth tokens
  - Reference top-k prediction generation for .refpt files
  - St

--- a/.github/workflows/call-perf-test.yml
+++ b/.github/workflows/call-perf-test.yml
@@ -164,7 +164,7 @@ jobs:
         cd ${{ steps.strings.outputs.work-dir }}
         export PYTHONPATH="${{ steps.strings.outputs.work-dir }}:$PYTHONPATH"
 
-        pytest -svv --confcutdir=tests/benchmark ${{ matrix.build.pytest }} --output-file ${{ steps.strings.outputs.perf_report_json_file }}
+        pytest -svv --confcutdir=tests/benchmark ${{ matrix.build.pytest }} ${{ matrix.build['accuracy-testing'] && '--accuracy-testing' || '' }} ${{ matrix.build['batch-size'] && format('--batch-size {0}', matrix.build['batch-size']) || '' }} --output-file ${{ steps.strings.outputs.perf_report_json_file }}
 
     - name: Dump stablehlo to report
       id: dump-stablehlo
