--- a/.github/Dockerfile
+++ b/.github/Dockerfile
@@ -8,7 +8,7 @@ ENV DEBIAN_FRONTEND=noninteractive
 
 COPY --chown=root:root --chmod=777 .github/docker_install.sh /tmp/script.sh
 RUN pkg_install() { apt-get update && apt-get install -y "$@"; } && export -f pkg_install && /tmp/script.sh ubuntu && \
-    rm /tmp/requirements.txt /tmp/requirements-dev.txt /tmp/script.sh
+    rm /tmp/script.sh
 
 FROM ghcr.io/tenstorrent/tt-mlir/tt-mlir-ci-ubuntu-22-04:${MLIR_TAG} as ci
 SHELL ["/bin/bash", "-c"]
@@ -19,7 +19,7 @@ ENV DEBIAN_FRONTEND=noninteractive
 # Install requirements.txt as global Python 3.11 packages
 COPY --chown=root:root --chmod=777 .github/docker_install.sh /tmp/script.sh
 RUN pkg_install() { apt-get update && apt-get install -y "$@"; } && export -f pkg_install && /tmp/script.sh ubuntu && \
-    rm /tmp/requirements.txt /tmp/requirements-dev.txt /tmp/script.sh
+    rm /tmp/script.sh
 
 FROM ghcr.io/tenstorrent/tt-mlir/tt-mlir-manylinux-2-34:${MLIR_TAG} AS cibw
 SHELL ["/bin/bash", "-c"]
@@ -94,11 +94,9 @@ SHELL ["/bin/bash", "-c"]
 ENV DEBIAN_FRONTEND=noninteractive
 
 # Install requirements.txt as global Python 3.11 packages
-COPY python_package/requirements.txt /tmp/requirements.txt
-COPY venv/requirements-dev.txt /tmp/requirements-dev.txt
 COPY --chown=root:root --chmod=777 .github/docker_install.sh /tmp/script.sh
 RUN pkg_install() { apt-get update && apt-get install -y "$@"; } && export -f pkg_install && /tmp/script.sh ubuntu && \
-    rm /tmp/requirements.txt /tmp/requirements-dev.txt /tmp/script.sh
+    rm /tmp/script.sh
 
 # Add entrypoint script
 COPY .github/entrypoint.sh /usr/local/bin/entrypoint.sh
