try with mpi linking

--- a/pjrt_implementation/src/CMakeLists.txt
+++ b/pjrt_implementation/src/CMakeLists.txt
@@ -41,7 +41,7 @@ target_link_directories(TTPJRTTTDylib PRIVATE
     ${LOGURU_LIB_DIR}
 )
 
-target_link_options(TTPJRTTTDylib PRIVATE "-Wl")
+target_link_options(TTPJRTTTDylib PRIVATE "-Wl,--no-undefined")
 
 # Setting RPATH to a path involving $ORIGIN (resolved location of the pjrt_plugin_tt.so
 # file) sets its search paths in which it will search for libs it dynamically links.
